Add GClosure marshalling cleanup

Add marshalling cleanup for Python callables and boxed GClosures
passed as arguments. Make sure the marshaller owns a reference
until clean. Fix transfer everything case by adding a new reference.
Remove unused header declaration: pygi_arg_gclosure_from_py_marshal

https://bugzilla.gnome.org/show_bug.cgi?id=695128